Copyright (C) 2019 Alpha Griffin
@%@~LICENSE~@%@

saw_070619_4 - Get terminal size.

saw_070619_3 - Clear the screen.

saw_070619_2 - Beginning keyboard input.

saw_070619_1 - First commit for vipy.
